@@ -27,6 +27,7 @@
 #include "spvm_runtime_info_type.h"
 #include "spvm_runtime_info_switch_info.h"
 #include "spvm_runtime_info_case_info.h"
+#include "spvm_portable.h"
 
 // Only use for constant value
 #include "spvm_type.h"
@@ -2744,6 +2745,32 @@ void SPVM_RUNTIME_free(SPVM_ENV* env) {
   // Free exception
   SPVM_RUNTIME_API_set_exception(env, NULL);
   
+  // Free portable
+  SPVM_PORTABLE* portable = runtime->portable;
+  if (portable->basic_types != NULL) {
+    free(portable->basic_types);
+  }
+  
+  /*
+  char** symbols;
+  int32_t* basic_types;
+  int32_t* fields;
+  int32_t* subs;
+  int32_t* mys;
+  int32_t* info_package_var_ids;
+  int32_t* info_sub_ids;
+  int32_t* info_field_ids;
+  int32_t* info_types;
+  int32_t* info_constants;
+  int32_t* info_switch_info_ints;
+  int64_t* info_long_values;
+  double* info_double_values;
+  char** info_string_values;
+  int32_t* info_string_lengths;
+  int64_t* opcodes;
+  */
+  
+
   free(runtime->package_vars_heap);
   
   free(runtime);
