@@ -1,7 +1,7 @@
 
 all:
 	cc -c -DSPVM_DEBUG_DUMP -DSPVM_DEBUG_OBJECT_COUNT -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ilib/SPVM/Builder/include -Ilib -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -O0 -g -o solo/main.o solo/main.c
-	cc  -o solo/main -lm -o solo/main solo/main.o lib/SPVM/Builder/src/spvm_array_field_access.o lib/SPVM/Builder/src/spvm_basic_type.o lib/SPVM/Builder/src/spvm_block.o lib/SPVM/Builder/src/spvm_call_sub.o lib/SPVM/Builder/src/spvm_case_info.o lib/SPVM/Builder/src/spvm_compiler.o lib/SPVM/Builder/src/spvm_compiler_allocator.o lib/SPVM/Builder/src/spvm_constant.o lib/SPVM/Builder/src/spvm_csource_builder.o lib/SPVM/Builder/src/spvm_descriptor.o lib/SPVM/Builder/src/spvm_dumper.o lib/SPVM/Builder/src/spvm_enumeration.o lib/SPVM/Builder/src/spvm_enumeration_value.o lib/SPVM/Builder/src/spvm_exe_csource_builder.o lib/SPVM/Builder/src/spvm_field.o lib/SPVM/Builder/src/spvm_field_access.o lib/SPVM/Builder/src/spvm_hash.o lib/SPVM/Builder/src/spvm_hash_func.o lib/SPVM/Builder/src/spvm_list.o lib/SPVM/Builder/src/spvm_my.o lib/SPVM/Builder/src/spvm_op.o lib/SPVM/Builder/src/spvm_op_checker.o lib/SPVM/Builder/src/spvm_opcode.o lib/SPVM/Builder/src/spvm_opcode_array.o lib/SPVM/Builder/src/spvm_opcode_builder.o lib/SPVM/Builder/src/spvm_package.o lib/SPVM/Builder/src/spvm_package_var.o lib/SPVM/Builder/src/spvm_package_var_access.o lib/SPVM/Builder/src/spvm_portable.o lib/SPVM/Builder/src/spvm_runtime.o lib/SPVM/Builder/src/spvm_runtime_allocator.o lib/SPVM/Builder/src/spvm_runtime_api.o lib/SPVM/Builder/src/spvm_runtime_basic_type.o lib/SPVM/Builder/src/spvm_runtime_builder.o lib/SPVM/Builder/src/spvm_runtime_field.o lib/SPVM/Builder/src/spvm_runtime_info_case.o lib/SPVM/Builder/src/spvm_runtime_info_switch_info.o lib/SPVM/Builder/src/spvm_runtime_info_type.o lib/SPVM/Builder/src/spvm_runtime_my.o lib/SPVM/Builder/src/spvm_runtime_package.o lib/SPVM/Builder/src/spvm_runtime_package_var.o lib/SPVM/Builder/src/spvm_runtime_sub.o lib/SPVM/Builder/src/spvm_string_buffer.o lib/SPVM/Builder/src/spvm_sub.o lib/SPVM/Builder/src/spvm_switch_info.o lib/SPVM/Builder/src/spvm_toke.o lib/SPVM/Builder/src/spvm_type.o lib/SPVM/Builder/src/spvm_use.o lib/SPVM/Builder/src/spvm_util_allocator.o lib/SPVM/Builder/src/spvm_var.o lib/SPVM/Builder/src/spvm_yacc.o lib/SPVM/Builder/src/spvm_yacc_util.o blib/lib/SPVM/CORE.native/CORE.so
+	cc  -o solo/main -lm -o solo/main solo/main.o lib/SPVM/Builder/src/spvm_array_field_access.o lib/SPVM/Builder/src/spvm_basic_type.o lib/SPVM/Builder/src/spvm_block.o lib/SPVM/Builder/src/spvm_call_sub.o lib/SPVM/Builder/src/spvm_case_info.o lib/SPVM/Builder/src/spvm_compiler.o lib/SPVM/Builder/src/spvm_compiler_allocator.o lib/SPVM/Builder/src/spvm_constant.o lib/SPVM/Builder/src/spvm_csource_builder_exe.o lib/SPVM/Builder/src/spvm_csource_builder_precompile.o lib/SPVM/Builder/src/spvm_descriptor.o lib/SPVM/Builder/src/spvm_dumper.o lib/SPVM/Builder/src/spvm_enumeration.o lib/SPVM/Builder/src/spvm_enumeration_value.o lib/SPVM/Builder/src/spvm_field.o lib/SPVM/Builder/src/spvm_field_access.o lib/SPVM/Builder/src/spvm_hash.o lib/SPVM/Builder/src/spvm_hash_func.o lib/SPVM/Builder/src/spvm_list.o lib/SPVM/Builder/src/spvm_my.o lib/SPVM/Builder/src/spvm_op.o lib/SPVM/Builder/src/spvm_op_checker.o lib/SPVM/Builder/src/spvm_opcode.o lib/SPVM/Builder/src/spvm_opcode_array.o lib/SPVM/Builder/src/spvm_opcode_builder.o lib/SPVM/Builder/src/spvm_package.o lib/SPVM/Builder/src/spvm_package_var.o lib/SPVM/Builder/src/spvm_package_var_access.o lib/SPVM/Builder/src/spvm_portable.o lib/SPVM/Builder/src/spvm_runtime.o lib/SPVM/Builder/src/spvm_runtime_allocator.o lib/SPVM/Builder/src/spvm_runtime_api.o lib/SPVM/Builder/src/spvm_runtime_basic_type.o lib/SPVM/Builder/src/spvm_runtime_builder.o lib/SPVM/Builder/src/spvm_runtime_field.o lib/SPVM/Builder/src/spvm_runtime_info_case.o lib/SPVM/Builder/src/spvm_runtime_info_switch_info.o lib/SPVM/Builder/src/spvm_runtime_info_type.o lib/SPVM/Builder/src/spvm_runtime_my.o lib/SPVM/Builder/src/spvm_runtime_package.o lib/SPVM/Builder/src/spvm_runtime_package_var.o lib/SPVM/Builder/src/spvm_runtime_sub.o lib/SPVM/Builder/src/spvm_string_buffer.o lib/SPVM/Builder/src/spvm_sub.o lib/SPVM/Builder/src/spvm_switch_info.o lib/SPVM/Builder/src/spvm_toke.o lib/SPVM/Builder/src/spvm_type.o lib/SPVM/Builder/src/spvm_use.o lib/SPVM/Builder/src/spvm_util_allocator.o lib/SPVM/Builder/src/spvm_var.o lib/SPVM/Builder/src/spvm_yacc.o lib/SPVM/Builder/src/spvm_yacc_util.o blib/lib/SPVM/CORE.native/CORE.so
 
 test:
 	cc -c -DSPVM_DEBUG_DUMP -DSPVM_DEBUG_OBJECT_COUNT -fno-strict-aliasing -pipe -fstack-protector -I/usr/local/include -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -Ilib/SPVM/Builder/include -Ilib -std=c99 -Wall -Wextra -Wno-unused-label -Wno-unused-function -Wno-unused-label -Wno-unused-parameter -Wno-unused-variable -O0 -g -o solo/t/spvm_t_list solo/t/spvm_t_list.c spvm_list.o spvm_util_allocator.o
